--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1>Hello! World </h1>
+    <h1>Hello ha!! World </h1>
     <img src="images/solent.jpg" alt="">
     <div id="app">
 
