--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Fadipe Design</title>
 </head>
 
 <body>
 
-    <h1>Hello ha!! World </h1>
+    <h1>Welcome to Fadipe Design </h1>
     <img src="images/solent.jpg" alt="">
     <div id="app">
 
