Made a start on Index.html and included comments

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fadipe Design</title>
+    <meta name="description" content="Personal and Affordable Web Design">
+    <meta name="keywords" content="web design, professional web design, affordable web design, website design"> <!-- Google good SEO for web design websites -->
+    <meta name="author" content="Oluwaseun Fadipe" > <!--Not sure if I should put Olu or Oluwaseun, although not really important at this point -->
+    <title>Fadipe Design | Welcome</title>
+    <link rel="style" href="C:\Users\Oluwaseun Fadipe\Documents\Uni 2017_18\Web_Design\Simple-Vue-Webpack-and-SASS-master\src\style.css">
 </head>
 
 <body>
 
-    <h1>Welcome to Fadipe Design </h1>
+    <header>
+        <div class= "container"></div>
+        <div id="branding"> </div> <!-- This is where the logo will go -->
+        <h1>Welcome to Fadipe Design </h1> <!-- This is heading, possibly add a logo instead -->
+    </header>
+    <nav> <!-- This is going be the navigation, will sort out the names -->
+        <ul>
+            <li> <a>href="index.html>" Home </a></li>
+            <li> <a>href="index.html>" About </a></li>
+            <li> <a>href="index.html>" Contact Me </a></li>
+            <li> <a>href="index.html>" Portfolio </a></li>
+            <li> <a>href="index.html>" Map </a></li>
+            <li> <a>href="index.html>" Something Else </a></li>
+        </ul>
+    </nav>
+
+
+    
     <img src="images/solent.jpg" alt="">
     <div id="app">
 
