--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,22 @@
         </nav>
     </header>
     
-
+    <section id-"showcase">
+        <div class="container">
+            <h1>Cheap Professional Websites</h1>
+            <p>Voluptatem totam facere natus dolorem at vel eligendi libero. Velit placeat nihil optio ad corporis ducimus. Est velit ullam. Corrupti eius et laborum ut aspernatur quis iste. Sequi illum et magni ab laborum amet est soluta quidem. Fugiat corporis adipisci fugit ipsam totam.</p>
+        <!-- Added fake sentance using faker plugin -->
+        </div>
+    </section>
+    <section id-"newsletter">
+        <div class="container">
+            <h1>Subcribe To My Newspaper</h1>
+            <form>
+                <input type="email" placeholder="Enter Your Email Address">
+                <button type="submit" class="button_1">Subscribe</button>
+            </form>
+        </div>
+    </section>
 
 
     
