--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
             <p>Voluptatem totam facere natus dolorem at vel eligendi libero. Velit placeat nihil optio ad corporis ducimus. Est velit ullam. Corrupti eius et laborum ut aspernatur quis iste. Sequi illum et magni ab laborum amet est soluta quidem. Fugiat corporis adipisci fugit ipsam totam.</p>
         <!-- Added fake sentance using faker plugin -->
         </div>
+
     </section>
+    <!--This subcribe newsletter could be move to another page -->
     <section id-"newsletter">
         <div class="container">
             <h1>Subcribe To My Newspaper</h1>
@@ -46,6 +48,13 @@
             </form>
         </div>
     </section>
+
+    <section id="boxes">
+        <div class="container"></div>
+        <div class="box" ></div>
+
+    </section>
+
 
 
     
