Added dummy images using faker

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,25 @@
 
     <section id="boxes">
         <div class="container"></div>
-        <div class="box" ></div>
+        <div class="box" >
+            <img src="http://lorempixel.com/640/480/fashion" alt="">
+            <h3>HTML 5 Markup</h3>
+            <p>Doloremque suscipit qui dolor animi ab animi consequatur autem recusandae. Voluptas dolorem tempore dolore maiores id eos. Ut eos ipsa provident inventore rem atque facere ullam. Similique consequatur saepe omnis sed nesciunt molestiae.</p>
+        </div>
+        <!-- This is where I will be putting my 3 main selling points, which sybmols -->
+        <div class="box" >
+            <img src="http://lorempixel.com/640/480/transport"
+                <h3>Responsive Design</h3>
+                <p>Doloremque suscipit qui dolor animi ab animi consequatur autem recusandae. Voluptas dolorem tempore dolore maiores id eos. Ut eos ipsa provident inventore rem atque facere ullam. Similique consequatur saepe omnis sed nesciunt molestiae.</p>
+        
+            </div>
+            <div class="box" >
+                <img src="http://lorempixel.com/640/480/abstract"
+                    <h3>CSS3 Stylng</h3>
+                    <p>Doloremque suscipit qui dolor animi ab animi consequatur autem recusandae. Voluptas dolorem tempore dolore maiores id eos. Ut eos ipsa provident inventore rem atque facere ullam. Similique consequatur saepe omnis sed nesciunt molestiae.</p>
+            
+                </div>
+
 
     </section>
 
