added the stylesheet link to the HTML

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
     <meta name="author" content="Oluwaseun Fadipe">
     <!--Not sure if I should put Olu or Oluwaseun, although not really important at this point -->
     <title>Fadipe Design | Welcome</title>
-    <link rel="style" href="C:\Users\Oluwaseun Fadipe\Documents\Uni 2017_18\Web_Design\Simple-Vue-Webpack-and-SASS-master\src\style.css">
+    <link rel="stylesheet" href="C:\Users\Oluwaseun Fadipe\Documents\Uni 2017_18\Web_Design\Simple-Vue-Webpack-and-SASS-master\src\style.css" type="text/css/">
+    <script src="bundle.js"></script>
 </head>
+
 
 <body>
 
@@ -106,7 +108,7 @@
 
 
     </div>
-    <script src="bundle.js"></script>
+   
 <!-- Maybe add a clock in the footer like in the Solent Pizza task last year -->
     <footer>
         <p>Fadipe Web Design </p>
