Edited the Nav, did not do it correctly.

--- a/src/index.html
+++ b/src/index.html
@@ -28,22 +28,22 @@
             <!-- This is going be the navigation, will sort out the names -->
             <ul>
                 <li>
-                    <a>href="index.html>" Home </a>
+                    <a href="index.html>" Home </a>
                 </li>
                 <li>
-                    <a>href="index.html>" About </a>
+                    <a href="index.html>" About </a>
                 </li>
                 <li>
-                    <a>href="index.html>" Contact Me </a>
+                    <a href="index.html>" Contact Me </a>
                 </li>
                 <li>
-                    <a>href="index.html>" Portfolio </a>
+                    <a href="index.html>" Portfolio </a>
                 </li>
                 <li>
-                    <a>href="index.html>" Map </a>
+                    <a href="index.html>" Map </a>
                 </li>
                 <li>
-                    <a>href="index.html>" Something Else </a>
+                    <a href="index.html>" Something Else </a>
                 </li>
             </ul>
         </nav>
