Trying to currently sort out the sass

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Oluwaseun Fadipe">
     <!--Not sure if I should put Olu or Oluwaseun, although not really important at this point -->
     <title>Fadipe Design | Welcome</title>
-    <link rel="stylesheet" href="C:\Users\Oluwaseun Fadipe\Documents\Uni 2017_18\Web_Design\Simple-Vue-Webpack-and-SASS-master\src\style.css" type="text/css/">
+    <link rel="stylesheet" href="C:\Users\Oluwaseun Fadipe\Documents\Uni 2017_18\Web_Design\Simple-Vue-Webpack-and-SASS-master\src\style.css" type="text/css">
     <script src="bundle.js"></script>
 </head>
 
@@ -28,22 +28,22 @@
             <!-- This is going be the navigation, will sort out the names -->
             <ul>
                 <li>
-                    <a href="index.html>" Home </a>
+                    <a href="index.html"></a> Home</a>
                 </li>
                 <li>
-                    <a href="index.html>" About </a>
+                    <a href="index.html"></a> About</a>
                 </li>
                 <li>
-                    <a href="index.html>" Contact Me </a>
+                    <a href="index.html"></a> Contact Me</a>
                 </li>
                 <li>
-                    <a href="index.html>" Portfolio </a>
+                    <a href="index.html"></a> Portfolio</a>
                 </li>
                 <li>
-                    <a href="index.html>" Map </a>
+                    <a href="index.html"></a> Map</a>
                 </li>
                 <li>
-                    <a href="index.html>" Something Else </a>
+                    <a href="index.html"></a> Something Else</a>
                 </li>
             </ul>
         </nav>
