Made more changes to HTML

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <div class="container"></div>
+        <div class="container">
         <div id="branding"> </div>
         <!-- This is where the logo will go -->
         <h1>Welcome to Fadipe Design </h1>
@@ -46,6 +46,9 @@
                 </li>
             </ul>
         </nav>
+    </div>
+            
+    
     </header>
 
     <section id- "showcase">
@@ -61,7 +64,7 @@
     <!--This subcribe newsletter could be move to another page -->
     <section id- "newsletter">
         <div class="container">
-            <h1>Subcribe To My Newspaper</h1>
+            <h1>Subcribe To My Letter</h1>
             <form>
                 <input type="email" placeholder="Enter Your Email Address">
                 <button type="submit" class="button_1">Subscribe</button>
@@ -81,12 +84,14 @@
         <!-- This is where I will be putting my 3 main selling points, which sybmols -->
         <div class="box">
             <img src="http://lorempixel.com/640/480/transport" <h3>Responsive Design</h3>
+            <h3>CSS3</h3>
             <p>Doloremque suscipit qui dolor animi ab animi consequatur autem recusandae. Voluptas dolorem tempore dolore maiores
                 id eos. Ut eos ipsa provident inventore rem atque facere ullam. Similique consequatur saepe omnis sed nesciunt
                 molestiae.</p>
 
         </div>
         <div class="box">
+            <h3>JavaScript</h3>
             <img src="http://lorempixel.com/640/480/abstract" <h3>CSS3 Stylng</h3>
             <p>Doloremque suscipit qui dolor animi ab animi consequatur autem recusandae. Voluptas dolorem tempore dolore maiores
                 id eos. Ut eos ipsa provident inventore rem atque facere ullam. Similique consequatur saepe omnis sed nesciunt
@@ -100,11 +105,11 @@
 
 
 
-    <img src="images/solent.jpg" alt="">
+   <!--- <img src="images/solent.jpg" alt="">
     <div id="app">
 
         <hello-component></hello-component>
-
+    -->
 
     </div>
    
