--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,12 @@
 <body>
 
     <div id="content">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
+       <header> Header </header>
+       <main>Main</main>
+       <section>Section</section>
+       <aside>Aside</aside>
+       <nav>nav</nav>
+       <footer>footer</footer>
 
         <script src="bundle.js"></script>
 </body>
