Added columns and widths

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,14 @@
 
 
 <body>
+<div class="grid">
+    <div class="row">
+        <div class="col-">
+            <div class="col">12 Column</div>
+        </div>
+    </div>
 
-    <div id="content">
-       <header> Header </header>
-       <main>Main</main>
-       <section>Section</section>
-       <aside>Aside</aside>
-       <nav>nav</nav>
-       <footer>footer</footer>
+</div>
 
         <script src="bundle.js"></script>
 </body>
