completed the 12 column grid, now going to make it responsive

--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,97 @@
 
 
 <body>
-<div class="grid">
-    <div class="row">
-        <div class="col-">
-            <div class="col">12 Column</div>
+    <div class="grid">
+        <div class="row">
+            <div class="col-">
+                <div class="col">12 Column</div>
+            </div>
+            <div class="col-6">
+                <div class="col">6 Column</div>
+            </div>
+            <div class="col-6">
+                <div class="col">6 Column</div>
+            </div>
+            <div class="col-4">
+                <div class="col">4 Column</div>
+            </div>
+            <div class="col-4">
+                <div class="col">4 Column</div>
+            </div>
+            <div class="col-4">
+                <div class="col">4 Column</div>
+            </div>
+            <div class="col-3">
+                <div class="col">3 Column</div>
+            </div>
+            <div class="col-3">
+                <div class="col">3 Column</div>
+            </div>
+            <div class="col-3">
+                <div class="col">3 Column</div>
+            </div>
+            <div class="col-3">
+                <div class="col">3 Column</div>
+            </div>
+            <div class="col-2">
+                <div class="col">2 Column</div>
+            </div>
+            <div class="col-2">
+                <div class="col">2 Column</div>
+            </div>
+            <div class="col-2">
+                <div class="col">2 Column</div>
+            </div>
+            <div class="col-2">
+                <div class="col">2 Column</div>
+            </div>
+            <div class="col-2">
+                <div class="col">2 Column</div>
+            </div>
+            <div class="col-2">
+                <div class="col">2 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
+            <div class="col-1">
+                <div class="col">1 Column</div>
+            </div>
         </div>
+
     </div>
 
-</div>
-
-        <script src="bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
