--- a/src/index.html
+++ b/src/index.html
@@ -18,95 +18,100 @@
 <body>
     <div class="grid">
         <div class="row">
-            <div class="col-">
+
+            <div class="col-wd-12">
                 <div class="col">12 Column</div>
             </div>
-            <div class="col-6">
+
+            <div class="col-wd-6">
                 <div class="col">6 Column</div>
             </div>
-            <div class="col-6">
+            <div class="col-wd-6">
                 <div class="col">6 Column</div>
             </div>
-            <div class="col-4">
+
+            <div class="col-wd-6 col-md-4">
                 <div class="col">4 Column</div>
             </div>
-            <div class="col-4">
+            <div class="col-wd-6 col-md-4">
                 <div class="col">4 Column</div>
             </div>
-            <div class="col-4">
+            <div class="col-wd-12 col-md-4">
                 <div class="col">4 Column</div>
             </div>
-            <div class="col-3">
+
+            <div class="col-wd-6 col-md-3">
                 <div class="col">3 Column</div>
             </div>
-            <div class="col-3">
+            <div class="col-wd-6 col-md-3">
                 <div class="col">3 Column</div>
             </div>
-            <div class="col-3">
+            <div class="col-wd-6 col-md-3">
                 <div class="col">3 Column</div>
             </div>
-            <div class="col-3">
+            <div class="col-wd-6 col-md-3">
                 <div class="col">3 Column</div>
             </div>
-            <div class="col-2">
+
+            <div class="col-wd-6 col-md-4 col-sm-2">
                 <div class="col">2 Column</div>
             </div>
-            <div class="col-2">
+            <div class="col-wd-6 col-md-4 col-sm-2">
                 <div class="col">2 Column</div>
             </div>
-            <div class="col-2">
+            <div class="col-wd-6 col-md-4 col-sm-2">
                 <div class="col">2 Column</div>
             </div>
-            <div class="col-2">
+            <div class="col-wd-6 col-md-4 col-sm-2">
                 <div class="col">2 Column</div>
             </div>
-            <div class="col-2">
+            <div class="col-wd-6 col-md-4 col-sm-2">
                 <div class="col">2 Column</div>
             </div>
-            <div class="col-2">
+            <div class="col-wd-6 col-md-4 col-sm-2">
                 <div class="col">2 Column</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
-            <div class="col-1">
-                <div class="col">1 Column</div>
+            <div class="col-wd-3 col-md-2 col-sm-1">
+                <div class="col">1</div>
             </div>
+
         </div>
 
-    </div>
-
-    <script src="bundle.js"></script>
+        <script src="bundle.js"></script>
 </body>
 
 </html>
