Added images to folder, and changed HTML

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="bundle.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,102 +17,62 @@
 
 
 <body>
-    <div class="grid">
-        <div class="row">
+    <div class="grid">`
 
-            <div class="col-wd-12">
-                <div class="col">12 Column</div>
-            </div>
 
-            <div class="col-wd-6">
-                <div class="col">6 Column</div>
-            </div>
-            <div class="col-wd-6">
-                <div class="col">6 Column</div>
-            </div>
+        <div class="col-m-4 col-4" id="header">
 
-            <div class="col-wd-6 col-md-4">
-                <div class="col">4 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-4">
-                <div class="col">4 Column</div>
-            </div>
-            <div class="col-wd-12 col-md-4">
-                <div class="col">4 Column</div>
-            </div>
+            <header>
+                    <img src="images/fadipedesigns.png" alt="">
+            </header>
+               
 
-            <div class="col-wd-6 col-md-3">
-                <div class="col">3 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-3">
-                <div class="col">3 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-3">
-                <div class="col">3 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-3">
-                <div class="col">3 Column</div>
-            </div>
 
-            <div class="col-wd-6 col-md-4 col-sm-2">
-                <div class="col">2 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-4 col-sm-2">
-                <div class="col">2 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-4 col-sm-2">
-                <div class="col">2 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-4 col-sm-2">
-                <div class="col">2 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-4 col-sm-2">
-                <div class="col">2 Column</div>
-            </div>
-            <div class="col-wd-6 col-md-4 col-sm-2">
-                <div class="col">2 Column</div>
-            </div>
+        </div>
+        <div class="col-m6 col-6" id="nav">
+            <nav>
+                <li>
+                    <a href="index.html">Home</a>
+                    <a href="">About</a>
+                    <a href="">Contact</a>
+                    <a href="">About</a>
+                    <a href="">About</a>
+                    <a href="">About</a>
+                </li>
+            </nav>
+        </div>
 
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
-            <div class="col-wd-3 col-md-2 col-sm-1">
-                <div class="col">1</div>
-            </div>
+        <div class="col m-12 col-12" id="main">
+            <main>
+                
+            <figure>
+                <img src="images/solent.jpg" alt="">
+            </figure>
+                </main>
 
         </div>
 
-        <script src="bundle.js"></script>
+        <div class="col m-3 col-3" id="feature1">
+            <h>Feature 1</h>
+            <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum modi
+                et. Perferendis aliquid sequi sint.</p>
+        </div>
+        <div class="col m-3 col-3" id="feature2">
+                <h>Feature 2</h>
+                <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum modi
+                    et. Perferendis aliquid sequi sint.</p>
+            </div>
+            <div class="col m-3 col-3" id="feature3">
+                    <h>Feature 3</h>
+                    <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum modi
+                        et. Perferendis aliquid sequi sint.</p>
+                </div>
+                <div class="col m-12 col-12" id="footer">
+                        <footer>footer</footer>
+    </div>
+
+
+
 </body>
 
 </html>
