Made a responsive menu, however the menu does not work when it converts to Hamburger

--- a/src/index.html
+++ b/src/index.html
@@ -18,58 +18,64 @@
 
 <body>
     <div class="grid">`
+        <div class="row">
 
 
-        <div class="col-m-4 col-4" id="header">
+            <div class="col-m-6 col-3" id="header">
 
-            <header>
-                    <img src="images/fadipedesigns.png" alt="">
-            </header>
-               
+                <header>
+                    <h1>LOGO SPACE</h1>
+                </header>
 
 
+
+            </div>
+            <div class="col-m-6 col-6" id="menu">
+                <div class="nav" id="#mynav">
+                    <nav>
+                        <li>
+                            <a href="index.html">Home</a>
+                            <a href="#about">About</a>
+                            <a href="#contact">Contact</a>
+                            <a href="#portfolio">Portfolio</a>
+                            <a href="#skills">Skills</a>
+                            <a href="#faq">FAQ</a>
+                            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+
+                        </li>
+                    </nav>
+                </div>
+            </div>
         </div>
-        <div class="col-m6 col-6" id="nav">
-            <nav>
-                <li>
-                    <a href="index.html">Home</a>
-                    <a href="">About</a>
-                    <a href="">Contact</a>
-                    <a href="">About</a>
-                    <a href="">About</a>
-                    <a href="">About</a>
-                </li>
-            </nav>
-        </div>
-
         <div class="col m-12 col-12" id="main">
             <main>
-                
-            <figure>
-                <img src="images/solent.jpg" alt="">
-            </figure>
-                </main>
+
+                <figure>
+                    <h1>MAIN SPACE</h1>
+                </figure>
+            </main>
 
         </div>
 
-        <div class="col m-3 col-3" id="feature1">
-            <h>Feature 1</h>
-            <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum modi
-                et. Perferendis aliquid sequi sint.</p>
-        </div>
-        <div class="col m-3 col-3" id="feature2">
-                <h>Feature 2</h>
-                <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum modi
-                    et. Perferendis aliquid sequi sint.</p>
+        <div class="row">
+            <div class="col m-3 col-3" id="feature">
+                <h>Feature 1</h>
+                <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum
+                    modi e et. Perferendis aliquid sequi sint.</p>
             </div>
-            <div class="col m-3 col-3" id="feature3">
-                    <h>Feature 3</h>
-                    <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum modi
-                        et. Perferendis aliquid sequi sint.</p>
-                </div>
-                <div class="col m-12 col-12" id="footer">
-                        <footer>footer</footer>
-    </div>
+            <div class="col m-3 col-3" id="feature">
+                <h>Feature 2</h>
+
+            </div>
+            <div class="col m-3 col-3" id="feature">
+                <h>Feature 3</h>
+                <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum
+                    modi et. Perferendis aliquid sequi sint.</p>
+            </div>
+        </div>
+        <div class="col m-12 col-12" id="footer">
+            <footer>footer</footer>
+        </div>
 
 
 
