--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <meta name="author" content="Oluwaseun Fadipe">
     <!--Not sure if I should put Olu or Oluwaseun, although not really important at this point -->
     <title>Fadipe Design | Welcome</title>
+    
 
 </head>
 
@@ -21,7 +22,7 @@
         <div class="row">
 
 
-            <div class="col-m-6 col-3" id="header">
+            <div class="col-m-12 col-12" id="header">
 
                 <header>
                     <h1>LOGO SPACE</h1>
@@ -30,7 +31,7 @@
 
 
             </div>
-            <div class="col-m-6 col-6" id="menu">
+            <div class="col-m-12 col-12" id="menu">
                 <div class="nav" id="#mynav">
                     <nav>
                         <li>
@@ -57,26 +58,21 @@
 
         </div>
 
-        <div class="row">
-            <div class="col m-3 col-3" id="feature">
-                <h>Feature 1</h>
-                <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum
-                    modi e et. Perferendis aliquid sequi sint.</p>
-            </div>
-            <div class="col m-3 col-3" id="feature">
-                <h>Feature 2</h>
+        <section id="responsive-images-columns">
+            <div class="container">
+                <h2>Core Skills</h2>
+                <figure>
+                    <img class="three-columns" src="images/htmllogo.svg" width="960" height="640" />
+                    <img class="three-columns" src="images/css3logo.svg" width="960" height="640" />
+                    <img class="three-columns" src="images/solent.jpg" width="960" height="640" />
+                </figure>
 
-            </div>
-            <div class="col m-3 col-3" id="feature">
-                <h>Feature 3</h>
-                <p>Omnis dolor minima vitae iste labore est ut nihil quis. Et repudiandae eos magni est occaecati voluptatum
-                    modi et. Perferendis aliquid sequi sint.</p>
+                <div class="col m-12 col-12" id="footer">
+                    <footer>footer</footer>
+                </div>
             </div>
         </div>
-        <div class="col m-12 col-12" id="footer">
-            <footer>footer</footer>
-        </div>
-
+    </div>
 
 
 </body>
