Added png images

--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,9 @@
             <div class="container">
                 <h2>Core Skills</h2>
                 <figure>
-                    <img class="three-columns" src="images/htmllogo.svg" width="960" height="640" />
-                    <img class="three-columns" src="images/css3logo.svg" width="960" height="640" />
-                    <img class="three-columns" src="images/solent.jpg" width="960" height="640" />
+                    <img class="three-columns" src="images/HTML5LOGO1.png" />
+                    <img class="three-columns" src="images/css3logo.png" />
+                    <img class="three-columns" src="images/jslogo.png" width="960" height="640" />
                 </figure>
 
                 <div class="col m-12 col-12" id="footer">
@@ -74,7 +74,12 @@
         </div>
     </div>
 
+    <div id="app">
 
+        <hello-component></hello-component>
+
+
+    </div>
 </body>
 
 </html>
