--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,9 @@
             <div class="container">
                 <h2>Core Skills</h2>
                 <figure>
-                    <img class="three-columns" src="images/HTML5LOGO1.png" />
-                    <img class="three-columns" src="images/css3logo.png" />
-                    <img class="three-columns" src="images/jslogo.png" width="960" height="640" />
+                    <img class="three-columns" src="images/html52.png" />
+                    <img class="three-columns" src="images/css3.png" />
+                    <img class="three-columns" src="images/js.png"  />
                 </figure>
             </div>
         </section>
