Added a section photo

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
             <main>
 
                 <figure>
-                    <h1>MAIN SPACE</h1>
+                    <img src="images/laptop.jpg" alt="">
                 </figure>
             </main>
 
@@ -70,7 +70,7 @@
             <div class="container">
                 <h2>Core Skills</h2>
                 <figure>
-                    <img class="three-columns" src="images/html52.png" />
+                    <img class="three-columns" src="images/html52.png" alt="HTML 5" />
                     <img class="three-columns" src="images/css3.png" />
                     <img class="three-columns" src="images/js.png"  />
                 </figure>
