why didnt it push

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 	<section class="hero">
 		<div class="background-image" style="background-image: url(images/hero.jpg);"></div>
 		<h1>Welcome to Olu Fadipe Web Design</h1>
-		<h3>That's right</h3>
+		<h3>That's right!</h3>
 	</section>
 
 
