--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ROlu Web Design Assignment</title>
+    <title>Olu Web Design Assignment</title>
 
 	
     <link rel="stylesheet" href="assignment/src/css/styles.css">
