--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 			<li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
 			<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
 			<li><a href="#"><i class="fa fa-snapchat-square"></i></a></li>
-			<li><a href="#"><i class="fa fa-github-square""></i></a></li>
+			<li><a href="#"><i class="fa fa-github-square"> </i></a></li>
 		</ul>
 		<p>Made by Oluwaseun Fadipe</p>
 		<p>Hope you enjoy the website</p>
