--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
 
 	<header>
-		<h1>Hello world</h1>
+		<h1>Hello world!</h1>
 		<h2><a href="#"> <img src="images/logo.png" alt="My Logo">
 		</a></h2>
 		<nav>
