--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Responsive Landing Page Template With Flexbox</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -26,7 +26,7 @@
 
 
     <section class="hero">
-        <div class="background-image" style="background-image: url(assets/img/Computerhome.jpg);"></div>
+        <div class="background-image" style="background-image: url(images/Computerhome.jpg);"></div>
         <h1>Olu Fadipe Web Design</h1>
     </section>
     
@@ -48,10 +48,10 @@
         <hr>
 
         <ul class="grid">
-            <li class="small" style="background-image: url(assets/img/htmllogo.png);"></li>
-            <li class="large" style="background-image: url(assets/img/csslogo.png);"></li>
-            <li class="large" style="background-image: url(assets/img/jslogo.png);"></li>
-            <li class="small" style="background-image: url(assets/img/phplogo.svg);"></li>
+            <li class="small" style="background-image: url(images/htmllogo.png);"></li>
+            <li class="large" style="background-image: url(images/csslogo.png);"></li>
+            <li class="large" style="background-image: url(images/jslogo.png);"></li>
+            <li class="small" style="background-image: url(images/phplogo.svg);"></li>
             </div>
     </section>
 
