Stylesheet is no longer linking to HTML for some reason. Webpack Issue?

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Olu Fadipe Web Design</title>
-    <link rel="stylesheet" href="animate.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+   
 </head>
 
 <body>
@@ -97,6 +97,57 @@
 
         </section>
 
+----------------------------------------------------------------------------------
+<!--
+
+<div class="container">
+      <div class="company-info">
+        <h3>Olu Web Design</h3>
+        <ul>
+          <li><i class="fa fa-phone"></i> +447710464385 </li>
+          <li><i class="fa fa-envelope"></i> oafadipe@gmail.com</li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h3>Contact Me</h3>
+        <form>
+          <p>
+            <label>First Name </label>
+            <input type="text" name="name">
+          </p>
+          <p>
+            <label>Second Name</label>
+            <input type="text" name="name2">
+          </p>
+          <p>
+            <label>Email Address</label>
+            <input type="email" name="email">
+          </p>
+          <p>
+            <label>Phone Number</label>
+            <input type="text" name="phone">
+          </p>
+          <p class="full">
+            <label>Message</label>
+            <textarea name="message" rows="5"></textarea>
+          </p>
+          <p class="full">
+            <button>Submit</button>
+          </p>
+        </form>
+      </div>
+    </div>
+  </div>
+
+-----------------------------------------------------------------------------------
+
+
+
+-->
+
+
+
+
 
         <section class="contact">
             <h3 class="title">Join our newsletter</h3>
@@ -111,13 +162,7 @@
 
         <footer>
             Social Media Links
-            <ul>
-                <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
-                <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-                <li><a href="#"><i class="fa fa-snapchat-square"></i></a></li>
-                <li><a href="#"><i class="fa fa-pinterest-square"></i></a></li>
-                <li><a href="#"><i class="fa fa-github-square""></i></a></li>
-            </ul>
+            
         </footer>
 
 </body>
