Basically transferred all the CSS to the SASS files

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Olu Fadipe Web Design</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
    
@@ -96,6 +96,52 @@
 
 
         </section>
+
+<!--
+
+<div class="container">
+      <div class="company-info">
+        <h3>Olu Web Design</h3>
+        <ul>
+          <li><i class="fa fa-phone"></i> +447710464385 </li>
+          <li><i class="fa fa-envelope"></i> oafadipe@gmail.com</li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h3>Contact Me</h3>
+        <form>
+          <p>
+            <label>First Name </label>
+            <input type="text" name="name">
+          </p>
+          <p>
+            <label>Second Name</label>
+            <input type="text" name="name2">
+          </p>
+          <p>
+            <label>Email Address</label>
+            <input type="email" name="email">
+          </p>
+          <p>
+            <label>Phone Number</label>
+            <input type="text" name="phone">
+          </p>
+          <p class="full">
+            <label>Message</label>
+            <textarea name="message" rows="5"></textarea>
+          </p>
+          <p class="full">
+            <button>Submit</button>
+          </p>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
+-->
+
 
 
 
