Added a contact form

--- a/src/index.html
+++ b/src/index.html
@@ -121,14 +121,38 @@
 
     <section class="contact">
         <h3 class="title">Join our newsletter</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae
-            pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
+        <p>Please join my newsletter for regular updates</p>
         <hr>
 
         <form>
             <input type="email" placeholder="Email">
             <a href="#" class="btn">Subscribe now</a>
         </form>
+    </section>
+    <section class="container">
+        <h2>Contact Form</h2>
+
+
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+      <option value="usa">United Kingdom</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
     </section>
 
     <footer>
