Added logo and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Olu Fadipe Web Design</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="icon" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 </head>
@@ -15,9 +15,8 @@
 <body>
 
     <header>
-        <h2>
-            <a href="#">Website Logo</a>
-        </h2>
+        <img src="images/OFWebDesignlogo.svg" alt="logo">
+
         <nav>
             <li>
                 <a href="#">Home</a>
@@ -45,7 +44,12 @@
         <h3 class="title">About</h3>
         <p>
             My name is Oluwaseun Fadipe, and I am a web developer/designer looking to get an A1 in this assignment. I think Joe is the
-            best teacher, got a lot of respect for the lad.
+            best teacher, got a lot of respect for the lad. Ut dolorem animi assumenda quia assumenda dolores. Fuga est aperiam
+            sunt nam assumenda quis consequatur tenetur similique. Dolore veritatis aperiam. Animi voluptatem et cupiditate
+            est optio non omnis reiciendis. Voluptatem nemo at et quia eos. Ut alias omnis maiores est pariatur. Amet minima
+            libero consequatur et corrupti ducimus laudantium. Exercitationem praesentium explicabo laborum aliquid sequi
+            at fugit illo natus. Et est ea officiis et est placeat aut. Et enim natus. Ducimus sint eum aut dicta vero eum.
+            Corrupti quibusdam est commodi eius labore non voluptas et. Quam excepturi eum modi consequatur rerum quidem.
 
         </p>
 
@@ -98,24 +102,17 @@
     <section class="reviews">
         <h3 class="title">What others say:</h3>
 
-        <p class="quote">Mauris sit amet mauris a arcu eleifend ultricies eget ut dolor. Class aptent taciti sociosqu ad litora torquent per
-            conubia nostra, per inceptos himenaeos.</p>
-        <p class="author">— Patrick Farrell</p>
+        <p class="quote">This website is absoutely amazing. Hold my watch</p>
+        <p class="author">— Konstanin Ruzhev</p>
 
-        <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae
-            pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
-        <p class="author">— George Smith</p>
+        <p class="quote">Sick website, I will hit you up when I need one</p>
+        <p class="author">— Shaun White</p>
 
-        <p class="quote">Donec commodo dolor augue, vitae faucibus tortor tincidunt in. Aliquam vitae leo quis mi pulvinar ornare. Integer
-            eu iaculis metus.</p>
+        <p class="quote">Highly professional, great service</p>
         <p class="author">— Kevin Blake</p>
 
 
     </section>
-
-
-
-
 
 
 
@@ -133,26 +130,26 @@
         <h2>Contact Form</h2>
 
 
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <form action="/action_page.php">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-      <option value="usa">United Kingdom</option>
-    </select>
+            <label for="country">Country</label>
+            <select id="country" name="country">
+                <option value="australia">Australia</option>
+                <option value="canada">Canada</option>
+                <option value="usa">USA</option>
+                <option value="UK">United Kingdom</option>
+            </select>
 
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+            <label for="subject">Subject</label>
+            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-    <input type="submit" value="Submit">
-  </form>
+            <input type="submit" value="Submit">
+        </form>
     </section>
 
     <footer>
