--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
                 <option value="australia">Australia</option>
                 <option value="canada">Canada</option>
                 <option value="usa">USA</option>
-                <option value="UK">United Kingdom</option>
+                <option value="usa">United Kingdom</option>
             </select>
 
             <label for="subject">Subject</label>
@@ -151,15 +151,13 @@
             <input type="submit" value="Submit">
         </form>
     </section>
-
+<section class="clock">
+        <p class="date">{{ date }}</p>
+        <p class="time">{{ time }}</p>
+        <p class="text">DIGITAL CLOCK using Vue.js 😃 </p>
+</section>
     <footer>
-        Social Media Links
-        <!-- Add font awesome icons -->
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-instagram"></a>
-
+            Oluwaseun Fadipe Website copyright 2018
     </footer>
     <script src="bundle.js"></script>
 </body>
