Minor changes to footer

--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
         <p class="text">DIGITAL CLOCK using Vue.js 😃 </p>
 </section>
     <footer>
-            Oluwaseun Fadipe Website copyright 2018
+            Oluwaseun Fadipe Website Copyright 2018
     </footer>
     <script src="bundle.js"></script>
 </body>
