Minor changes to clock

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
 <section class="clock">
         <p class="date">{{ date }}</p>
         <p class="time">{{ time }}</p>
-        <p class="text">DIGITAL CLOCK using Vue.js 😃 </p>
+        <p class="text">My Digital Clock... Tick Tock clock⌚️ </p>
 </section>
     <footer>
             Oluwaseun Fadipe Website Copyright 2018
