Minor changes to menu, also added url to readme

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,13 @@
                 <a href="#">About</a>
             </li>
             <li>
-                <a href="#">Products</a>
+                <a href="#">Web Development</a>
+            </li>
+            <li>
+                <a href="#">Web Design</a>
+            </li>
+            <li>
+                <a href="#">Reviews</a>
             </li>
 
             <li>
